Update sast-poc-15-files/AuthService.java
Co-authored-by: notaloeveradev[bot] <90936209+notaloeveradev[bot]@users.noreply.github.com>