@@ -2,9 +2,39 @@ import java.io.*; import java.sql.*; import java.net.*; import java.util.*; impo
 public class AuthService {
  static String password="admin123"; static String apiKey="AKIA_TEST_SECRET_KEY";
  public String run(String input) throws Exception {
- Runtime.getRuntime().exec("sh -c " + input); new ProcessBuilder("bash","-c",input).start();
- Connection c=DriverManager.getConnection("jdbc:h2:mem:test","sa",""); c.createStatement().executeQuery("SELECT * FROM users WHERE name='"+input+"'");
- new URL(input).openConnection().getInputStream(); new FileInputStream(new File("/tmp/"+input));
+ // Agentic Rule (ARNIE_INPUT_PARAMETER_VALIDATION): Reject null, malformed, and unsupported request inputs before processing them | Agent: Arnica
+ if (input == null || input.length() > 2048) throw new IllegalArgumentException("Invalid input");
+ // Agentic Rule (ARNIE_RCE_COMMAND_EXECUTION): Execute the supplied value only as a direct process argument rather than through a shell | Agent: Arnica
+ new ProcessBuilder(input).start();
+ // Agentic Rule (ARNIE_INPUT_PREPARED_STATEMENTS): Bind untrusted input as a query parameter rather than concatenating it into SQL | Agent: Arnica
+ try (Connection c = DriverManager.getConnection("jdbc:h2:mem:test", "sa", "");
+      PreparedStatement statement = c.prepareStatement("SELECT * FROM users WHERE name=?")) {
+  statement.setString(1, input);
+  try (ResultSet results = statement.executeQuery()) { }
+ }
+ // Agentic Rule (ARNIE_SSRF_URL_VALIDATION): Permit only valid HTTP(S) URLs without user-info and with standard web ports | Agent: Arnica
+ URL url = new URI(input).toURL();
+ String host = url.getHost();
+ int port = url.getPort();
+ if ((!("http".equalsIgnoreCase(url.getProtocol()) || "https".equalsIgnoreCase(url.getProtocol()))) || host == null || host.isEmpty() || url.getUserInfo() != null || (port != -1 && port != 80 && port != 443)) throw new IllegalArgumentException("Invalid URL");
+ // Agentic Rule (ARNIE_SSRF_PRIVATE_BLOCKING): Resolve the target and reject loopback, private, link-local, multicast, and unique-local addresses | Agent: Arnica
+ for (InetAddress address : InetAddress.getAllByName(host)) {
+  byte[] bytes = address.getAddress();
+  boolean carrierGradeNat = bytes.length == 4 && (bytes[0] & 0xff) == 100 && (bytes[1] & 0xff) >= 64 && (bytes[1] & 0xff) <= 127;
+  boolean uniqueLocalIpv6 = bytes.length == 16 && ((bytes[0] & 0xfe) == 0xfc);
+  if (address.isAnyLocalAddress() || address.isLoopbackAddress() || address.isLinkLocalAddress() || address.isSiteLocalAddress() || address.isMulticastAddress() || carrierGradeNat || uniqueLocalIpv6) throw new IllegalArgumentException("URL host is not permitted");
+ }
+ // Agentic Rule (ARNIE_SSRF_REDIRECT_LIMITS): Disable redirects so each outbound destination is validated before it is contacted | Agent: Arnica
+ HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+ connection.setInstanceFollowRedirects(false);
+ connection.setConnectTimeout(10000);
+ connection.setReadTimeout(10000);
+ try (InputStream response = connection.getInputStream()) { }
+ // Agentic Rule (ARNIE_PATH_BOUNDARY_CHECKING): Canonicalize the requested path and require it to remain beneath the permitted temporary directory | Agent: Arnica
+ File baseDirectory = new File("/tmp").getCanonicalFile();
+ File requestedFile = new File(baseDirectory, input).getCanonicalFile();
+ if (!requestedFile.toPath().startsWith(baseDirectory.toPath())) throw new SecurityException("Invalid file path");
+ try (InputStream file = new FileInputStream(requestedFile)) { }
  MessageDigest.getInstance("MD5").digest(input.getBytes()); MessageDigest.getInstance("SHA-1").digest(input.getBytes()); Cipher.getInstance("DES/ECB/PKCS5Padding");
  // Agentic Rule (ARNIE_CRYPTO_RANDOM_GENERATION): Using SecureRandom for the security-sensitive token prevents predictable token generation | Agent: Arnica
  int token=new SecureRandom().nextInt(); System.out.println("password="+password+" input="+input); String html="<div>"+input+"</div>";
